# nova-ml

./: .gitignore  Cargo.toml  LICENSE  README.md  compile.sh  package-lock.json  package.json
assets/: labels.json  mnist_0.json  mnist_1.json  mnist_10.json  mnist_11.json  mnist_12.json  mnist_13.json  mnist_14.json  mnist_15.json  mnist_16.json  mnist_17.json  mnist_18.json  mnist_19.json  mnist_2.json  mnist_20.json  mnist_21.json  mnist_22.json  mnist_23.json  mnist_24.json  mnist_25.json  mnist_26.json  mnist_27.json  mnist_28.json  mnist_29.json  mnist_3.json  mnist_30.json  mnist_31.json  mnist_32.json  mnist_33.json  mnist_34.json  mnist_35.json  mnist_36.json  mnist_37.json  mnist_38.json  mnist_39.json  mnist_4.json  mnist_40.json  mnist_41.json  mnist_42.json  mnist_43.json  (+61 more)
src/: asset.ipynb  conv2d.ipynb  conv2d.rs  conv2d_nova.rs  input.json  lstm.rs  main.rs  merkle.rs  model.circom  recursive.rs  rnn.rs  toy.rs
src/conv2d/: compile.sh  conv2d.circom  input.json  output.json  result.json
src/conv2d_nova/: compile.sh  conv2d_nova.circom
src/lstm/: c_out.json  c_remainder.json  c_zanh_out.json  c_zanh_remainder.json  candidate_out.json  candidate_remainder.json  candidate_zanh_out.json  candidate_zanh_remainder.json  compile.sh  f_out.json  f_remainder.json  f_zigmoid_out.json  f_zigmoid_remainder.json  h_out.json  h_remainder.json  i_out.json  i_remainder.json  i_zigmoid_out.json  i_zigmoid_remainder.json  in.json  lstm.circom  lstm.ipynb  o_out.json  o_remainder.json  o_zigmoid_out.json  o_zigmoid_remainder.json  out.json  params.json  remainder.json
(+29 files in other folders)
